testdata/baselines/reference/submodule/compiler/usedImportNotElidedInJs.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
test.js(1,25): error TS2307: Cannot find module 'moment' or its corresponding type declarations.
test.js(2,35): error TS2307: Cannot find module 'moment' or its corresponding type declarations.
test.js(3,48): error TS2448: Block-scoped variable 'moment' used before its declaration.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== test.js (3 errors) ====
    import * as moment from 'moment';
                            ~~~~~~~~
!!! error TS2307: Cannot find module 'moment' or its corresponding type declarations.
    import rollupMoment__default from 'moment';
                                      ~~~~~~~~
!!! error TS2307: Cannot find module 'moment' or its corresponding type declarations.
    export const moment = rollupMoment__default || moment;
                                                   ~~~~~~
!!! error TS2448: Block-scoped variable 'moment' used before its declaration.
!!! related TS2728 test.js:3:14: 'moment' is declared here.
    